# Western-Water-Datahub

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  Dockerfile-rise  README  README.md  cloudbuild.yaml  codecov.yml  docker-compose-rise.yml  docker-compose.yml  latest.json  local.config.yml  makefile  pygeoapi.config.yml  pyproject.toml  readme.md  requirements.txt  setup.py  test.md
.devcontainer/: devcontainer.json
.github/workflows/: auto_update_pygeoapi.yml  compose.yml  pyright.yml
dashboard-ui/: .env.example  .eslintrc.js  Dockerfile  README.md  jest.config.e2e.ts  jest.config.ts  jest.config.unit.ts  jest.setup.ts  netlify.toml  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  tsconfig.json
dashboard-ui/e2e/: Chart.spec.ts  Selectors.spec.ts
dashboard-ui/public/: robots.txt  sitemap.xml
dashboard-ui/public/sprite/: teacups.json
dashboard-ui/src/__tests__/: google.test.e2e.ts
dashboard-ui/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
dashboard-ui/src/components/: LineChart.tsx
dashboard-ui/src/contexts/: ColorScheme.tsx  MapContexts.tsx
dashboard-ui/src/data/: huc02Centers.ts  managingRegionCenters.ts  regionCenters.ts  stateCenters.ts
dashboard-ui/src/hooks/: useHistoricalData.ts  useLoading.ts  useReservoirData.ts  useSnotelData.ts
dashboard-ui/src/icons/: Basemap.tsx  Circle.tsx  Close.tsx  Controls.tsx  DashedLine.tsx  Filter.tsx  Info.tsx  Legend.tsx  Line.tsx  MapSearch.tsx  Menu.tsx  Moon.tsx  Reset.tsx  Screenshot.tsx  Square.tsx  Sun.tsx  Up.tsx
dashboard-ui/src/lib/: consts.ts  main.ts  types.ts
dashboard-ui/src/managers/: Loading.init.ts  Loading.manager.ts  Notification.init.ts  Notification.manager.ts
dashboard-ui/src/providers/: Mantine.tsx  Map.tsx  index.tsx
dashboard-ui/src/services/: edr.init.ts  edr.service.ts  esri.service.ts  report.service.ts  report.utils.ts
dashboard-ui/src/utils/: edrUrl.ts  getBoundingGeographyLabel.ts  joinSentence.ts  request.ts  reservoirDataDisplay.ts  test-utils.tsx
docker/: entrypoint.sh  readme.md
docs/: API_overview.md  ATTRIBUTIONS.md  ETL.md  LICENSE  cloud_deployment.md  edr_how_to.md  mappings.md  ogc_apis.md  ontology.md  query_times.md  readme.md  traversal.md  upstream_behavior.md
docs/noaa_qpf/: APIs.md  README.md  queries.md
hub-ui/: .prettierrc.mjs  .yarnrc.yml  Dockerfile  README.md  default.env  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  vite.config.mjs  vitest.config.mjs  vitest.setup.mjs
hub-ui/.storybook/: main.ts  preview.tsx
hub-ui/.yarn/releases/: yarn-4.9.2.cjs
hub-ui/__mocks__/: mapbox-gl.ts
hub-ui/__mocks__/@hansdo/: mapbox-gl-arcgis-featureserver.ts
hub-ui/e2e/: Home.spec.ts
hub-ui/src/: App.tsx  global.css  main.tsx  theme.ts
hub-ui/src/app/: layout.tsx  page.tsx
hub-ui/src/assets/: Arrow.tsx  Calendar.tsx  Check.tsx  Circle.tsx  CircleDown.tsx  CircleUp.tsx  CopyCode.tsx  CopyLink.tsx  Delete.tsx  Download.tsx  Features.tsx  Filter.tsx  Grid.tsx  Help.tsx  Info.tsx  Invisible.tsx  Label.tsx  Legend.tsx  Line.tsx  LineChart.tsx  Minus.tsx  Moon.tsx  Order.tsx  Palette.tsx  Plus.tsx  Raster.tsx  Search.tsx  Square.tsx  Sun.tsx  Visible.tsx  X.tsx
hub-ui/src/consts/: collections.ts  geojson.ts
hub-ui/src/contexts/: MapContexts.tsx
hub-ui/src/features/: Table.tsx
hub-ui/src/hooks/: useLoading.ts  useLocations.ts  useValidation.ts
hub-ui/src/lib/: main.ts
hub-ui/src/managers/: Loading.init.ts  Loading.manager.ts  Main.init.ts  Main.manager.ts  Main.utils.ts  Notification.init.ts  Notification.manager.ts  Warning.init.ts  Warning.manager.ts  types.ts
hub-ui/src/pages/: Layout.page.tsx  pages.module.css
hub-ui/src/providers/: Mantine.tsx  Map.tsx  index.tsx
hub-ui/src/services/: coverageGrid.service.ts  csv.service.ts  edr.service.ts  esri.service.ts
hub-ui/src/types/: huc02.ts  region.ts  state.ts
hub-ui/src/utils/: chunk.ts  clarifyObject.ts  collection.ts  compareArrays.ts  csv.ts  dates.ts  filterCollections.ts  getIdStore.ts  getLabel.ts  groupLocationsByCollection copy.ts  groupLocationsByCollection.ts  hexColor copy.ts  hexColor.ts  isTopLayer.ts  isTypeObject.ts  label.ts  layerDefinitions.ts  normalizeBBox.ts  parameters.ts  provider.ts  request copy.ts  request.ts  searchFeatures.ts  sortObject.ts  (+4 more)
hub-ui/test-utils/: index.ts  render.tsx
mappings/: LICENSE
pygeoapi/: Dockerfile  entrypoint.sh  pygeoapi.config.yml  requirements.txt
pygeoapi-deployment/: Dockerfile  README.md  USBR_core.ttl  default.openapi.yml  deployment-requirements.txt  entrypoint.sh  pygeoapi.config.yml
rise/: __init__.py  cache.py  covjson.py  custom_types.py  edr_helpers.py  lib.py  rise.py  rise_api_types.py  rise_cache.py  rise_edr.py  rise_edr_helpers.py  rise_edr_share.py  rise_edr_test.py  rise_test.py  upstream_test.py
rise/lib/: add_results.py  cache.py  cache_test.py  helpers.py  helpers_test.py  location.py  location_test.py
rise/tests/: test_covjson.py  test_helpers.py  test_provider.py  test_rise_helpers.py  test_rise_provider.py  test_rise_upstream.py  test_sanity_checks.py
scripts/: generate_graph.sh  index.ts  list.csv  makefile  package-lock.json  package.json  readme.md  tsconfig.json
scripts/graph/: Dockerfile  Qleverfile  build_qlever.sh  generate_release_graphs.sh  makefile  pull_all_graphs.sh
scripts/list_all_awdb_params/: awdb_forecast_params.txt  script.py
scripts/noaa_rfc_by_doi_region/: noaa_rfc_stations_by_region.csv  noaa_stations.html  script.py
scripts/prep_noaa_list_for_dashboard/: NOAA RFC Forecast Points - To IoW.xlsx  clean.py  generate.py  readme.md  validate.py
scripts/reservoir_list/: list.csv  makefile
scripts/storage_sql_script/: generate.py
subdir/: .gitignore  pyproject.toml
(+402 files in other folders)
