# Copyright 2025 Lincoln Institute of Land Policy
# SPDX-License-Identifier: MIT

[project]
name = "rise-edr"
version = "0.1.0"
description = "Mappings from the USBR RISE API to OGC EDR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "covjson-pydantic>=0.5.0",
    "jsonpatch>=1.33",
    "pytest>=8.3.4",
    "redis>=5.2.1",
    "starlette>=0.46.0",
    "uvicorn>=0.34.0",
    "pygeoapi",
    "geojson-pydantic>=1.2.0",
    "opentelemetry-instrumentation-aiohttp-client>=0.51b0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "pygeoapi@git+https://github.com/webb-ben/pygeoapi.git@pydantic",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: GIS",
]

keywords = [
    "cgs",
    "pygeoapi",
    "rise",]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.3",
    "pytest-xdist>=3.6.1",
    "rise-edr",
]

[tool.uv.sources]
rise-edr = { workspace = true }

[tool.pyright]
# we can't resolve shapely from source so we need to just disable this check
reportMissingModuleSource = false

[tool.pytest.ini_options]
# needed to prevent a deprecation warning; doesnt really affect any behavior
asyncio_default_fixture_loop_scope = "function"
