# Copyright 2025 Lincoln Institute of Land Policy
# SPDX-License-Identifier: MIT

[project]
name = "wwdh_integrations"
version = "0.1.0"
description = "Mappings from various hydrological data sources to a standardized OGC EDR API format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "covjson-pydantic>=0.5.0",
    "jsonpatch>=1.33",
    "redis>=5.2.1",
    "uvicorn>=0.34.0",
    "geojson-pydantic>=1.2.0",
    "opentelemetry-instrumentation-aiohttp-client>=0.51b0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp>=1.30.0",
    "orjson>=3.10.15",
    # Uses the `dev` branch which brings in optimizations common to both wwdh and asu projects
    "pygeoapi @ git+https://github.com/internetofwater/pygeoapi.git@943d5dc79aa127d173fe0f3be1081f37b5e6ef61",
    "msgspec>=0.19.0",
    "flask-cors>=6.0.2",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: GIS",
]

keywords = [
    "cgs",
    "pygeoapi",
    "rise",
    "snowtel",
    "hydrology"
]

[dependency-groups]
# Dependencies needed for development and testing
dev = [
    "pyright>=1.1.397",
    "pytest-asyncio>=0.25.3",
    "pytest-xdist>=3.6.1",
    "radon>=6.0.1",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "geopandas>=1.1.1",
]
# dependencies needed for external providers
deployment = [
"xarray",
"zarr<3",
"s3fs<=2023.6.0",
"gunicorn<24",
"gevent"
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
# needed to prevent a deprecation warning; doesnt really affect any behavior
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers"
markers = [
    "upstream: marks tests that test upstream behavior outside of our control"
]

[tool.coverage.run]
# don't include code in test files in coverage
omit = [
    "**/*_test.py"
]
